--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1437,11 +1437,8 @@ main .index-header .behavior-prev:hover {
   margin: 0 40px;
   display: flex;
 }
-.product-main .product-container .product-menu {
-  margin-right: 24px;
-}
 .product-main .product-container .product-menu .product-menu-col {
-  width: 220px;
+  width: 240px;
   box-shadow: 0 2px 5px #e9e9e9;
 }
 .product-main .product-container .product-menu .product-menu-col .sidebar-title {
@@ -1461,6 +1458,9 @@ main .index-header .behavior-prev:hover {
   list-style: none;
   padding: 0;
 }
+.product-main .product-container .product-menu .product-menu-col .filter-panel ul li {
+  transition: all linear 0.3s;
+}
 .product-main .product-container .product-menu .product-menu-col .filter-panel ul li a {
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.2rem;
@@ -1471,7 +1471,10 @@ main .index-header .behavior-prev:hover {
   padding: 5px;
   transition: all linear 0.3s;
 }
-.product-main .product-container .product-menu .product-menu-col .filter-panel ul li a:hover {
+.product-main .product-container .product-menu .product-menu-col .filter-panel ul li:hover {
+  transform: translateX(5px);
+}
+.product-main .product-container .product-menu .product-menu-col .filter-panel ul li:hover a {
   background-color: none;
   color: #eb6420;
   cursor: pointer;
@@ -1479,6 +1482,9 @@ main .index-header .behavior-prev:hover {
 .product-main .product-container .product-menu .product-menu-col .filter-price ul {
   list-style: none;
   padding: 0;
+}
+.product-main .product-container .product-menu .product-menu-col .filter-price ul .price-about {
+  transition: all linear 0.3s;
 }
 .product-main .product-container .product-menu .product-menu-col .filter-price ul .price-about a {
   font-family: "Josefin Sans", sans-serif;
@@ -1490,42 +1496,45 @@ main .index-header .behavior-prev:hover {
   padding: 5px;
   transition: all linear 0.3s;
 }
-.product-main .product-container .product-menu .product-menu-col .filter-price ul .price-about a:hover {
+.product-main .product-container .product-menu .product-menu-col .filter-price ul .price-about:hover {
+  transform: translateX(5px);
+}
+.product-main .product-container .product-menu .product-menu-col .filter-price ul .price-about:hover a {
   background-color: none;
   color: #eb6420;
   cursor: pointer;
 }
-.product-main .product-container .product-list {
+.product-main .product-container .product-col .product-list {
   width: 100%;
 }
-.product-main .product-container .product-list .product-list-col {
+.product-main .product-container .product-col .product-list .product-list-col {
   padding: 0;
 }
-.product-main .product-container .product-list .product-list-col .product-item {
-  width: 313px;
+.product-main .product-container .product-col .product-list .product-list-col .product-item {
+  width: 285px;
   margin-bottom: 40px;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info {
   width: 100%;
   text-align: center;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img {
   width: 100%;
   position: relative;
   display: inline-block;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img img {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img img {
   width: 100%;
   overflow: hidden;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img img.last-img {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img img.last-img {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 4;
   display: none;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button {
   position: absolute;
   bottom: 24px;
   left: 21%;
@@ -1535,42 +1544,42 @@ main .index-header .behavior-prev:hover {
   transform: translateY(50%);
   transition: all ease 0.8s;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon {
   padding: 0 5px;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon i {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon i {
   width: 40px;
   height: 40px;
   background-color: #000;
   color: #fff;
   padding-top: 12px;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon i:hover {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img .product-icon .product-button .product-button__icon i:hover {
   background-color: #eb6420;
   color: #fff;
   cursor: pointer;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img:hover .last-img {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img:hover .last-img {
   display: inline;
   cursor: pointer;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-img:hover .product-icon .product-button {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-img:hover .product-icon .product-button {
   visibility: visible;
   opacity: 0.8;
   transform: translateY(0);
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-detail {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-detail {
   padding: 30px 0;
   width: 100%;
   cursor: context-menu;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-detail .product-vendor {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-detail .product-vendor {
   font-family: "Josefin Sans", sans-serif;
   font-size: 1rem;
   font-weight: none;
   margin-bottom: 8px;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-detail .product-link__title a {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-detail .product-link__title a {
   color: #000;
   text-transform: uppercase;
   text-decoration: none;
@@ -1580,12 +1589,12 @@ main .index-header .behavior-prev:hover {
   line-height: 1.4rem;
   transition: all linear 0.3s;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-detail .product-link__title a:hover {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-detail .product-link__title a:hover {
   background-color: none;
   color: #eb6420;
   cursor: pointer;
 }
-.product-main .product-container .product-list .product-list-col .product-item .product-info .product-detail .product-link__price {
+.product-main .product-container .product-col .product-list .product-list-col .product-item .product-info .product-detail .product-link__price {
   padding-top: 8px;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.2rem;
@@ -2327,6 +2336,155 @@ main .index-header .behavior-prev:hover {
 .product-details .also-product .also-product-list .also-product-item .also-product-info p a {
   text-decoration: none;
   color: #787878;
+}
+.product-details .product-review {
+  margin-top: 60px;
+  padding: 20px 40px;
+  border: 1px solid #e9e9e9;
+}
+.product-details .product-review .review-title h4 {
+  text-transform: uppercase;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 700;
+  position: relative;
+}
+.product-details .product-review .review-title h4::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.product-details .product-review .write-to-button {
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.product-details .product-review .write-to-button .review-star {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: none;
+}
+.product-details .product-review .write-to-button .write-review {
+  background-color: #000;
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: none;
+  text-transform: uppercase;
+  padding: 14px 20px 10px 20px;
+  transition: all linear 0.3s;
+}
+.product-details .product-review .write-to-button .write-review:hover {
+  background-color: #eb6420;
+  color: none;
+  cursor: pointer;
+}
+.product-details .product-review .write-to-button::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 60px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.product-details .product-review .review-container {
+  margin: 10px 0;
+}
+.product-details .product-review .review-container .review-form {
+  margin-bottom: 16px;
+  padding-bottom: 20px;
+  display: none;
+}
+.product-details .product-review .review-container .review-form .review-title {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+}
+.product-details .product-review .review-container .review-form .review-form-input {
+  width: 100%;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-input {
+  width: 100%;
+  padding: 6px 0;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-input input {
+  width: 100%;
+  border: 1px solid #e9e9e9;
+  padding: 12px 12px 10px 12px;
+  outline: none;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-input input .error {
+  border: 1px solid red;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-input input:focus {
+  border: 1px solid #000;
+}
+.product-details .product-review .review-container .review-form .review-form-input .rating {
+  margin-bottom: 12px;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-comment textarea {
+  width: 100%;
+  border: 1px solid #e9e9e9;
+  padding: 12px;
+  outline: none;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-comment textarea .error {
+  border: 1px solid red;
+}
+.product-details .product-review .review-container .review-form .review-form-input .review-comment textarea:focus {
+  border: 1px solid #000;
+}
+.product-details .product-review .review-container .review-form .review-form-input .button-submit {
+  position: relative;
+}
+.product-details .product-review .review-container .review-form .review-form-input .button-submit .btn {
+  background-color: #000;
+  color: #fff;
+  border-radius: 0;
+  padding: 8px 8px 4px 8px;
+  text-transform: uppercase;
+  transition: all linear 0.3s;
+}
+.product-details .product-review .review-container .review-form .review-form-input .button-submit .btn:hover {
+  background-color: #eb6420;
+  color: none;
+  cursor: pointer;
+}
+.product-details .product-review .review-container .review-form .review-form-input .button-submit::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 60px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.product-details .product-review .review-container .review-post {
+  padding: 10px 0;
+}
+.product-details .product-review .review-container .review-post .review-header {
+  padding: 10px 0;
+}
+.product-details .product-review .review-container .review-post .review-header .review-name {
+  padding-top: 10px;
+  text-transform: uppercase;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.product-details .product-review .review-container .review-post .review-header .review-date p {
+  text-transform: initial;
+  font-style: italic;
+  margin: 0;
+}
+.product-details .product-review .review-container .review-post .review-content p {
+  margin: 0;
 }
 
 footer .footer-top {
