--- a/asset/scss/product-details/_detail-content.scss
+++ b/asset/scss/product-details/_detail-content.scss
@@ -1,5 +1,6 @@
 .product-details {
     padding: 100px 0;
+
     .details-container {
 
         .product-img {
@@ -12,19 +13,20 @@
                         top: 50%;
                         z-index: 9;
                         height: 20px;
-            
+
                         &::before {
                             content: "";
                         }
                     }
-            
+
                     .slick-prev {
                         left: 100px;
                     }
-            
+
                     .slick-next {
                         right: 100px;
                     }
+
                     .behavior-prev {
                         font-size: 1.2rem;
                         width: 30px;
@@ -37,7 +39,7 @@
                         z-index: 1;
                         @include transition(all, linear, .3s);
                     }
-            
+
                     .behavior-next {
                         font-size: 1.2rem;
                         width: 30px;
@@ -50,12 +52,13 @@
                         z-index: 1;
                         @include transition(all, linear, .3s);
                     }
-            
+
                     .behavior-next:hover,
                     .behavior-prev:hover {
                         @include hover(none, #787878, pointer);
                         font-size: 1.4rem;
                     }
+
                     .img-center-item {
                         img {
                             width: 60%;
@@ -218,6 +221,184 @@
                             color: #787878;
 
                         }
+                    }
+                }
+            }
+        }
+    }
+
+    .product-review {
+        margin-top: 60px;
+        padding: 20px 40px;
+        border: 1px solid #e9e9e9;
+
+        .review-title {
+            h4 {
+                text-transform: uppercase;
+                @include font($font, 1.6rem, 700);
+                position: relative;
+
+                &::after {
+                    content: "";
+                    width: 100%;
+                    position: absolute;
+                    left: 0;
+                    top: 40px;
+                    border-bottom: 1px solid #e9e9e9;
+                }
+            }
+        }
+
+        .write-to-button {
+            margin: 30px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+
+            .review-star {
+                @include font($font, 1.2rem, none);
+            }
+
+            .write-review {
+                background-color: #000;
+                color: #fff;
+                @include font($font, 1rem, none);
+                text-transform: uppercase;
+                padding: 14px 20px 10px 20px;
+                @include transition(all, linear, .3s);
+
+                &:hover {
+                    @include hover($hoverColor, none, pointer);
+                }
+            }
+
+            &::after {
+                content: "";
+                width: 100%;
+                position: absolute;
+                left: 0;
+                top: 60px;
+                border-bottom: 1px solid #e9e9e9;
+            }
+
+        }
+
+        .review-container {
+            margin: 10px 0;
+
+            .review-form {
+                margin-bottom: 16px;
+                padding-bottom: 20px;
+                display: none;
+
+                .review-title {
+                    @include font($font, 1.2rem, 600);
+                    text-transform: uppercase;
+                    padding-bottom: 8px;
+                }
+
+                .review-form-input {
+                    width: 100%;
+
+                    .review-input {
+                        width: 100%;
+                        padding: 6px 0;
+
+                        input {
+                            width: 100%;
+                            border: 1px solid #e9e9e9;
+                            padding: 12px 12px 10px 12px;
+                            outline: none;
+
+                            .error {
+                                border: 1px solid red;
+                            }
+                        }
+
+                        input:focus {
+                            border: 1px solid #000;
+                        }
+
+
+                    }
+
+                    .rating {
+                        margin-bottom: 12px;
+                    }
+
+                    .review-comment {
+                        textarea {
+                            width: 100%;
+                            border: 1px solid #e9e9e9;
+                            padding: 12px;
+                            outline: none;
+
+                            .error {
+                                border: 1px solid red;
+                            }
+                        }
+
+                        textarea:focus {
+                            border: 1px solid #000;
+                        }
+                    }
+
+                    .button-submit {
+                        position: relative;
+
+                        .btn {
+                            background-color: #000;
+                            color: #fff;
+                            border-radius: 0;
+                            padding: 8px 8px 4px 8px;
+                            text-transform: uppercase;
+                            @include transition(all, linear, .3s);
+
+                            &:hover {
+                                @include hover($hoverColor, none, pointer);
+                            }
+                        }
+
+                        &::after {
+                            content: "";
+                            width: 100%;
+                            position: absolute;
+                            left: 0;
+                            top: 60px;
+                            border-bottom: 1px solid #e9e9e9;
+                        }
+                    }
+
+
+                }
+            }
+
+
+            .review-post {
+                padding: 10px 0;
+
+                .review-header {
+                    padding: 10px 0;
+
+                    .review-name {
+                        padding-top: 10px;
+                        text-transform: uppercase;
+                        @include font($font, 1rem, 700);
+                    }
+
+                    .review-date {
+                        p {
+                            text-transform: initial;
+                            font-style: italic;
+                            margin: 0;
+                        }
+                    }
+                }
+
+                .review-content {
+                    p {
+                        margin: 0;
                     }
                 }
             }
