--- a/asset/scss/product/_product-content.scss
+++ b/asset/scss/product/_product-content.scss
@@ -6,10 +6,10 @@
         display: flex;
 
         .product-menu {
-            margin-right: 24px;
+            // margin-right: 24px;
 
             .product-menu-col {
-                width: 220px;
+                width: 240px;
                 box-shadow: 0 2px 5px #e9e9e9;
 
 
@@ -31,6 +31,7 @@
                         padding: 0;
 
                         li {
+                            @include transition(all, linear, .3s);
                             a {
                                 @include font($font, 1.2rem, none);
                                 color: #000;
@@ -38,9 +39,13 @@
                                 line-height: 2rem;
                                 padding: 5px;
                                 @include transition(all, linear, .3s);
+                            }
+                            &:hover {
+                                transform: translateX(5px);
 
-                                &:hover {
+                                a {
                                     @include hover(none, $hoverColor, pointer);
+
                                 }
                             }
                         }
@@ -53,6 +58,8 @@
                         padding: 0;
 
                         .price-about {
+                            @include transition(all, linear, .3s);
+
                             a {
                                 @include font($font, 1.2rem, none);
                                 color: #000;
@@ -61,8 +68,14 @@
                                 padding: 5px;
                                 @include transition(all, linear, .3s);
 
-                                &:hover {
+                            }
+
+                            &:hover {
+                                transform: translateX(5px);
+
+                                a {
                                     @include hover(none, $hoverColor, pointer);
+
                                 }
                             }
                         }
@@ -72,120 +85,123 @@
 
         }
 
-        .product-list {
-            width: 100%;
+        .product-col {
+            .product-list {
+                width: 100%;
 
-            .product-list-col {
-                padding: 0;
+                .product-list-col {
+                    padding: 0;
 
-                .product-item {
-                    width: 313px;
-                    margin-bottom: 40px;
-
-
-                    .product-info {
-                        width: 100%;
-                        text-align: center;
+                    .product-item {
+                        width: 285px;
+                        margin-bottom: 40px;
 
 
-                        .product-img {
+                        .product-info {
                             width: 100%;
-                            position: relative;
-                            display: inline-block;
+                            text-align: center;
 
-                            img {
+
+                            .product-img {
                                 width: 100%;
-                                overflow: hidden;
+                                position: relative;
+                                display: inline-block;
 
-                                &.last-img {
-                                    position: absolute;
-                                    top: 0;
-                                    left: 0;
-                                    z-index: 4;
-                                    display: none;
+                                img {
+                                    width: 100%;
+                                    overflow: hidden;
 
+                                    &.last-img {
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        z-index: 4;
+                                        display: none;
+
+                                    }
                                 }
-                            }
 
-                            .product-icon {
-                                .product-button {
-                                    position: absolute;
-                                    bottom: 24px;
-                                    left: 21%;
-                                    z-index: 4;
-                                    visibility: hidden;
-                                    opacity: 0;
-                                    transform: translateY(50%);
-                                    @include transition(all, ease, .8s);
+                                .product-icon {
+                                    .product-button {
+                                        position: absolute;
+                                        bottom: 24px;
+                                        left: 21%;
+                                        z-index: 4;
+                                        visibility: hidden;
+                                        opacity: 0;
+                                        transform: translateY(50%);
+                                        @include transition(all, ease, .8s);
 
-                                    .product-button__icon {
-                                        padding: 0 5px;
+                                        .product-button__icon {
+                                            padding: 0 5px;
 
-                                        i {
-                                            width: 40px;
-                                            height: 40px;
-                                            background-color: #000;
-                                            color: #fff;
-                                            padding-top: 12px;
+                                            i {
+                                                width: 40px;
+                                                height: 40px;
+                                                background-color: #000;
+                                                color: #fff;
+                                                padding-top: 12px;
 
-                                            &:hover {
-                                                @include hover($hoverColor, #fff, pointer);
+                                                &:hover {
+                                                    @include hover($hoverColor, #fff, pointer);
+                                                }
                                             }
+                                        }
+                                    }
+                                }
+
+                                &:hover {
+                                    .last-img {
+                                        display: inline;
+                                        cursor: pointer;
+                                    }
+
+                                    .product-icon {
+                                        .product-button {
+                                            visibility: visible;
+                                            opacity: 0.8;
+                                            transform: translateY(0);
+
                                         }
                                     }
                                 }
                             }
 
-                            &:hover {
-                                .last-img {
-                                    display: inline;
-                                    cursor: pointer;
-                                }
-                                .product-icon {
-                                    .product-button {
-                                        visibility: visible;
-                                        opacity: 0.8;
-                                    transform: translateY(0);
 
+
+                            .product-detail {
+                                padding: 30px 0;
+                                width: 100%;
+                                cursor: context-menu;
+
+
+                                .product-vendor {
+                                    @include font($font, 1rem, none);
+                                    margin-bottom: 8px;
+                                }
+
+                                .product-link__title {
+                                    a {
+                                        color: #000;
+                                        text-transform: uppercase;
+                                        text-decoration: none;
+                                        @include font($font, 1.2rem, 700);
+                                        line-height: 1.4rem;
+                                        @include transition(all, linear, .3s);
+
+                                        &:hover {
+                                            @include hover(none, $hoverColor, pointer);
+                                        }
                                     }
                                 }
-                            }
-                        }
 
-
-
-                        .product-detail {
-                            padding: 30px 0;
-                            width: 100%;
-                            cursor: context-menu;
-
-
-                            .product-vendor {
-                                @include font($font, 1rem, none);
-                                margin-bottom: 8px;
-                            }
-
-                            .product-link__title {
-                                a {
-                                    color: #000;
-                                    text-transform: uppercase;
-                                    text-decoration: none;
+                                .product-link__price {
+                                    padding-top: 8px;
                                     @include font($font, 1.2rem, 700);
-                                    line-height: 1.4rem;
-                                    @include transition(all, linear, .3s);
-
-                                    &:hover {
-                                        @include hover(none, $hoverColor, pointer);
-                                    }
                                 }
                             }
 
-                            .product-link__price {
-                                padding-top: 8px;
-                                @include font($font, 1.2rem, 700);
-                            }
                         }
-
                     }
                 }
             }
