--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -5,18 +5,12 @@
 @import 'style/cart.scss';
 @import 'index/index-header.scss';
 @import 'index/index-content.scss';
-@import 'pages/page-header.scss';
+@import 'style/bg_header.scss';
 @import 'pages/page-content.scss';
-@import 'product/product-header.scss';
 @import 'product/product-content.scss';
-@import 'contact/contact-header.scss';
 @import 'contact/contact-content.scss';
-@import 'blog/blog-header.scss';
 @import 'blog/blog-content.scss';
-@import 'account/account-header.scss';
 @import 'account/account-content.scss';
-@import 'register/register-header.scss';
 @import 'register/register-content.scss';
-@import 'product-details/detail-header.scss';
 @import 'product-details/detail-content.scss';
 @import 'style/footer.scss';
