--- a/asset/scss/style/_bg_header.scss
+++ b/asset/scss/style/_bg_header.scss
@@ -1,4 +1,4 @@
-.blog-header {
+.bg-header {
     background-color: #000;
     height: 260px;
     display: flex;
@@ -7,7 +7,7 @@
     flex-direction: column;
     color: #fff;
     cursor: context-menu;
-    .blog-heading {
+    .heading {
         @include font($font, none, 700);
         text-transform: uppercase;
     }
