--- a/asset/scss/detail.scss
+++ b/asset/scss/detail.scss
@@ -3,6 +3,6 @@
 @import './Base/base';
 @import './Layout/header';
 @import './Components/bg_header';
-@import './Pages/home';
+@import './Pages/detail';
 @import './Components/cart';
 @import './Layout/footer';
